# sinkhole

./: .gitignore  .gitreview  .zuul.yaml  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
contrib/: config
contrib/sources/: fedora.repo  fedora_constraints  koji_constraints
functional_tests/scenario001/: comps-f28.xml  expected_packages  fedora.repo  fedora_config  fedora_constraints  koji_constraints  overrides-fedora-28.repo  overrides_fedora_constraints
sinkhole/: command.py  config.py  kojidl.py  masher.py  repo.py  source.py  util.py
sinkhole/tests/: test_config.py  test_repo.py  test_source.py  test_util.py
