[metadata]
name = sinkhole
author = Haïkel Guémar
author-email = hguemar@fedoraproject.org
summary = A RPM repository aggregator (or sinkhole)
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/hguemar/sinkhole
license = MIT
classifier =
           Development Status :: 2 - Pre-Alpha
           License :: OSI Approved :: MIT License
           Intended Audience :: Developers
           Intended Audience :: System Administrators
           Topic :: System :: Software Distribution
           Programming Language :: Python
           Environment :: Console

[files]
packages = sinkhole


[entry_points]
console_scripts  =
    sinkhole = sinkhole.command:main

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --cov=sinkhole
        --cov-report term-missing 
